--- a/Web Scraper/The Soup is Real/task-info.yaml
+++ b/Web Scraper/The Soup is Real/task-info.yaml
@@ -170,6 +170,12 @@ files:
     </body>
     </html>
   learner_created: true
+- name: engine/__init__.py
+  visible: true
+  learner_created: true
+- name: engine/core.py
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/145/stages/784/implement#comment
 status: Failed
 feedback:
