--- a/Web Scraper/The Soup is Real/task-info.yaml
+++ b/Web Scraper/The Soup is Real/task-info.yaml
@@ -1,44 +1,5 @@
 type: edu
 files:
-- name: scraper.py
-  visible: true
-  text: |
-    """Module: Web Scraper"""
-    import requests
-    from bs4 import BeautifulSoup
-    from dataclasses import dataclass
-
-
-    class MyRequest:
-
-        default_lang = {'Accept-Language': 'en-US,en;q=0.5'}
-
-        def __init__(self, url: str):
-            self.url = url
-            self.r = requests.get(url, headers=self.default_lang)
-            status = self.r.status_code
-            # check if connection is valid
-            if status == 400 or status == 500:
-                raise ValueError(f"Status: {status}. Should recheck response object.")
-            # self.raw = self.response.json()
-
-        def content(self):
-            soup = BeautifulSoup(self.r.content, 'html.parser')
-            result = soup.find("meta")
-            print(dict(result))
-            # try:
-            #     # content = self.raw.get('content', None)
-            #     assert content is not None
-            #     print(content)
-            # except AssertionError:
-            #     print("Invalid movie page!")
-
-
-    if __name__ == "__main__":
-        link = input()
-        myRequest = MyRequest(link)
-        myRequest.content()
-  learner_created: false
 - name: tests.py
   visible: false
   text: |
@@ -154,10 +115,46 @@ files:
     if __name__ == '__main__':
         WebScraperTest().run_tests()
   learner_created: false
-- name: engine/__init__.py
+- name: scraper.py
   visible: true
-  learner_created: true
-- name: engine/core.py
+  text: |
+    """Module: Web Scraper"""
+    import requests
+    from bs4 import BeautifulSoup
+    from dataclasses import dataclass
+
+
+    class MyRequest:
+
+        default_lang = {'Accept-Language': 'en-US,en;q=0.5'}
+
+        def __init__(self, url: str):
+            self.url = url
+            self.r = requests.get(url, headers=self.default_lang)
+            status = self.r.status_code
+            # check if connection is valid
+            if status == 400 or status == 500:
+                raise ValueError(f"Status: {status}. Should recheck response object.")
+            # self.raw = self.response.json()
+
+        def content(self):
+            soup = BeautifulSoup(self.r.content, 'html.parser')
+            result = soup.find("meta")
+            print(dict(result))
+            # try:
+            #     # content = self.raw.get('content', None)
+            #     assert content is not None
+            #     print(content)
+            # except AssertionError:
+            #     print("Invalid movie page!")
+
+
+    if __name__ == "__main__":
+        link = input()
+        myRequest = MyRequest(link)
+        myRequest.content()
+  learner_created: false
+- name: source.html
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/projects/145/stages/784/implement#comment
@@ -165,5 +162,5 @@ status: Failed
 feedback:
   message: "Wrong answer in test #1\n\nA wrong number of files with articles was found.\
     \ \n0 files were found, 8 files were expected."
-  time: Fri, 23 Jul 2021 18:46:33 UTC
-record: 4
+  time: Sun, 25 Jul 2021 22:45:38 UTC
+record: 3
