--- a/Web Scraper/Soup, Sweet Soup/task-info.yaml
+++ b/Web Scraper/Soup, Sweet Soup/task-info.yaml
@@ -159,6 +159,33 @@ files:
     if __name__ == '__main__':
         WebScraperTest().run_tests()
   learner_created: false
+- name: Bullying_and_harassment_are_rife_in_astronomy_poll_suggests.txt
+  visible: true
+  learner_created: true
+- name: NASA_investigates_renaming_James_Webb_telescope_after_antiLGBT_claims.txt
+  visible: true
+  learner_created: true
+- name: Single_chip_tests_thousands_of_enzyme_mutations_at_once.txt
+  visible: true
+  learner_created: true
+- name: COVID_vaccines_have_higher_approval_in_lessaffluent_countries.txt
+  visible: true
+  learner_created: true
+- name: China’s_space_station_is_preparing_to_host_1000_scientific_experiments.txt
+  visible: true
+  learner_created: true
+- name: COVID_and_mass_sport_events_early_studies_yield_limited_insights.txt
+  visible: true
+  learner_created: true
+- name: DeepMind’s_AI_predicts_structures_for_a_vast_trove_of_proteins.txt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/145/stages/785/implement#comment
 status: Failed
+feedback:
+  message: |-
+    Wrong answer in test #1
+
+    Impossible to find directory /home/karl/Dev/jba-hyperskill/python-developer/30-2021-06-13-SUN/web-scraper/Web Scraper/task/Page_1
+  time: Mon, 26 Jul 2021 17:16:02 UTC
 record: 3
